welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: identifier expected but integer literal found.
	var w:Int=-1;
                   ^