welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var z:Int=nums(0);
	var w:Int=-1;

	for (x<-0 to nums.length-1) {
		if (nums(x)>z) {
			z=nums(x)
		}
	}
	for (x<-0 to nums.length-1) {
		w=w+1;
		if(nums(x)== z) return w;
	}
}
